@@ -276,6 +276,16 @@ typedef void (*Eina_Free_Cb)(void *data);
 #define EINA_FREE_CB(Function) ((Eina_Free_Cb)Function)
 
 /**
+ * @def EINA_C_ARRAY_LENGTH
+ * Macro to return the array length of a standard c array.
+ * For example:
+ * int foo[] = { 0, 1, 2, 3 };
+ * would return 4 and not 4 * sizeof(int).
+ * @since 1.2.0
+ */
+#define EINA_C_ARRAY_LENGTH(arr) (sizeof(arr) / sizeof((arr)[0]))
+
+/**
  * @}
  */
 
